postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: smartops-postgres
  namespace: smartops
spec:
  selector:
    app: smartops-postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
