smartops-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: smartops-backend-service
  namespace: smartops
spec:
  selector:
    app: smartops-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
